test/files/neg/t3977.check
t3977.scala:12: error: implicit error;
!I w: E
  new NoNull
  ^
1 error
